1.3.4dev: mainnav CSS fixes (as there's some overlap)
This was a follow-up to the #12640 related changes

Refs #13116.


git-svn-id: http://trac.edgewall.org/intertrac/log:/trunk@16868 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -364,7 +364,7 @@ form.mod #changeinfo .options { padding: 0 0 0.5em 1em }
 #mainnav :link, #mainnav :visited {
  border-bottom: none;
  color: #666;
- padding: .4em 20px;  /* mainnav_v_padding */
+ padding: .5em 20px;  /* mainnav_v_padding */
 }
 
 #mainnav :link:hover, #mainnav :visited:hover {
